<resources>
    <string name="app_name">AnyGym\nOwner</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="forgotPassword"><u>Forgot password?</u></string>
    <string name="loginwith">Login With</string>
    <string name="swipe_to_register"> Swipe to Register </string>
    <string name="or">OR</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Mobile">Mobile</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="ReEnterPassword">Re-enter Password</string>
    <string name="Mobile_No">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="login_Otp">OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="submit">Submit</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="tap">tap here</string>
    <string name="logout">Logout</string>
    <string name="change_or_add_image">Change or add Image</string>
    <string name="title_activity_gymdetails">GymdetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="FullName">Full Name</string>


    <string name="facebook_app_id">307762623508431</string>
    <string name="fb_login_protocol_scheme">fb307762623508431</string>
    <string name="chargesDescription"> - Our system is based on in-app money called "Credits". \n - You get 5 Rs. per 1 Credit you collect.\n<font color='#ff0000'> *Final charges are evaluated by our team and discussed with you.</font></string>
    <string name="about">Project By : Rahul Saliya \n Contact Us \nMobile : +XXYYYYYYYYYY \nEmail : RHSDevs@outlook.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
