<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textinput"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:hint="@string/Mobile_No"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/otpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textinput_disabled"
                android:drawableStart="@drawable/ic_sms"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:enabled="false"
                android:hint="@string/login_Otp"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnSendOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button"
                android:text="@string/send_otp"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnVerifyOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button"
                android:text="@string/verify_otp"
                android:textSize="16dp"
                android:visibility="gone" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>