<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_male_user_profile_picture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_add_circle_outline_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/editImageview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="11dp"
                android:src="@drawable/ic_edit_circle_outline_black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textinput"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:elevation="3dp"
                android:hint="@string/FullName"
                android:lines="1"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textinput"
                android:elevation="3dp"
                android:hint="Email(Opional)"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/ageET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textinput"
                android:elevation="3dp"
                android:hint="Age"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:padding="10dp"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18dp" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:buttonTint="@color/colorAccent"
                    android:checked="true"
                    android:text="@string/Male"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/Female"
                    android:textSize="18dp" />
            </RadioGroup>

            <EditText
                android:id="@+id/upiET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textinput"
                android:elevation="3dp"
                android:maxLines="1"
                android:hint="Enter your UPI id"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/upiMatchET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/textinput"
                android:elevation="3dp"
                android:maxLines="1"
                android:hint="re-enter UPI id here..."
                android:inputType="text"
                android:padding="10dp"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_btn_left"
                android:drawableRight="@drawable/ic_close"
                android:padding="10dp"
                android:text="Logout"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_btn_right"
                android:drawableLeft="@drawable/ic_check_black"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>